--- a/inicio.html
+++ b/inicio.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" data-bg-video="https://www.youtube.com/embed/vO5yet3Ot64?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-1w" data-bg-video="https://www.youtube.com/embed/vO5yet3Ot64?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     
 
@@ -86,7 +86,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">SOMOS UM SISTEMA<br> <br>DE AJUDA ENTRE AMIGOS<br><br>6 CICLOS/FASES PARA DOAÇÃO<br><br>INICIA DOANDO APENAS 10 REAIS<br><br>RECEBE NO FINAL FASE 6 <br><br>MAIS DE 2 MIL REAIS<br><br>QUER 9 REAIS DE PRESENTE PARA INICIAR?</h3>
+                <h3 class="mbr-section-title display-2">SOMOS GRUPO EM UM SISTEMA<br> <br>DE AJUDA MÚTUA ENTRE AMIGOS<br><br>6 CICLOS/FASES PARA DOAÇÃO<br><br>INICIA DOANDO APENAS 10 REAIS<br><br>RECEBE NO FINAL FASE 6 <br><br>MAIS DE 2 MIL REAIS<br><br>QUER 9 REAIS DE PRESENTE PARA INICIAR?</h3>
                 <small class="mbr-section-subtitle"><br>LEIA AS INFORMAÇÕES ATENTAMENTE</small>
             </div>
         </div>
@@ -354,7 +354,7 @@
 
                   </div>
 
-                  <div><a class="btn btn-danger" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">&nbsp; &nbsp; &nbsp;QUERO PARTICIPAR &nbsp; &nbsp;&nbsp;</a></div>
+                  <div><a class="btn btn-danger" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">QUERO PARTICIPAR</a></div>
               </div>
 
 
@@ -705,7 +705,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-warning" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">&nbsp; &nbsp;QUERO PARTICIPAR &nbsp;&nbsp;</a></div>
+                    <div class="text-xs-center"><a class="btn btn-warning" href="http://www.35.kmitd1.com/w/leXej7Ie1cWL4b6LXecc64f864" target="_blank">QUERO PARTICIPAR</a></div>
                 </div>
             </div>
 
