--- a/confirme-seu-cadastro.html
+++ b/confirme-seu-cadastro.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/fundo-trans-doa-vc-ganha-251x128.png" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/fundo-trans-320x128.png" alt="Mobirise"></a>
                         <a class="navbar-caption" href="inicio">Início</a>
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1l" style="background-color: rgb(226, 80, 65); padding-top: 140px; padding-bottom: 60px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1l" style="background-color: rgb(226, 80, 65); padding-top: 140px; padding-bottom: 60px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
