--- a/seja-bem-vindo.html
+++ b/seja-bem-vindo.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/fundo-trans-doa-vc-ganha-251x128.png" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/fundo-trans-320x128.png" alt="Mobirise"></a>
                         <a class="navbar-caption" href="inicio">Início</a>
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
