--- a/baixar-aplicativo.html
+++ b/baixar-aplicativo.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-x" style="background-image: url(assets/images/room-laptop.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-x" style="background-image: url(assets/images/room-laptop.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -70,14 +70,14 @@
                     <div class="mbr-table-md-up">
                         
                         <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 62%;">
-                            <div class="mbr-figure"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/MDbzJU8Lk_Y?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                            <div class="mbr-figure"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/teG9IzCX400?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                         </div>
                         <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
 
                             <h3 class="mbr-section-title display-2">BAIXAR APLICATIVO</h3>
 
                             <div class="mbr-section-text">
-                                <p>Para baixar o Aplicativo e ganhar os 6,00 reais de bonificação você deve se casdastrar por nosso código promocional, bastar seguir até o site pelo botão abaixo.</p>
+                                <p>Para baixar o Aplicativo e ganhar os 9,00 reais de bonificação você deve se casdastrar por nosso código promocional, clique no botão abaixo.</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-lg btn-danger-outline btn-danger" href="https://www.celcoin.com.br/convite/o2xk1sc7" target="_blank">ACESSAR SITE</a></div>
