--- a/compartilhar.html
+++ b/compartilhar.html
@@ -57,16 +57,16 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-28" style="background-image: url(assets/images/facebook-saiba-como-publicar-posts-com-fundo-colorido-2000x1019.jpg); padding-top: 160px; padding-bottom: 160px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-28" style="background-image: url(assets/images/facebook-saiba-como-publicar-posts-com-fundo-colorido-2000x1019.jpg); padding-top: 160px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">COMPARTILHE</h3>
-                <div class="lead"><p>COPIE ESSE TEXTO E COMPARTILHE...&nbsp;</p><p>Você gosta de tecnologias? </p><p>Teste um Aplicativo e ganhe uma boa grana. </p><p>Acesse: doaeganha.vai.la</p></div>
-                <div><a class="btn btn-danger" href="https://mobirise.com">COMPARTILHE</a></div>
+                <h3 class="mbr-section-title display-2">COMPARTILHE NO BOTÃO VERMELHO ACIMA NO MENU...<br>Ou clique abaixo em continuar,<br>para o último passo.</h3>
+                <div class="lead"></div>
+                <div><a class="btn btn-danger" href="doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/nome-na-lista" target="_blank">CONTINUAR</a>   </div>
             </div>
         </div>
     </div>
