--- a/seja-bem-vindo.html
+++ b/seja-bem-vindo.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -83,10 +83,10 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
-                  <h3 class="mbr-section-title display-2">Primeiros Passos</h3>
+                  <h3 class="mbr-section-title display-2">Próximos Passos</h3>
                   
 
-                  <div><a class="btn btn-danger" href="https://mobirise.com">&nbsp; &nbsp; &nbsp;PROSSEGUIR &nbsp; &nbsp;&nbsp;</a></div>
+                  <div><a class="btn btn-danger" href="doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/baixar-aplicativo" target="_blank">CONTINUAR...</a></div>
               </div>
 
 
