--- a/fazer-doacao.html
+++ b/fazer-doacao.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-24" style="background-image: url(assets/images/room-laptop.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-24" style="background-image: url(assets/images/room-laptop.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -81,7 +81,7 @@
                                 <p>Neste passo você deve ter em mãos os dados da pessoa que ira receber a sua doação, para isso entre em contato com um administrador no Grupo Whatsapp Suporte:</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-lg btn-success-outline btn-success" href="https://mobirise.com"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>&nbsp;WHATSAPP SUPORTE</a> <a class="btn btn-lg btn-danger-outline btn-danger" href="doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/compartilhar" target="_blank">CONTINUAR</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-lg btn-success-outline btn-success" href="chat.whatsapp.com/31zG1b9QBvN4TL4dKVrBxr" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>&nbsp;WHATSAPP SUPORTE</a> <a class="btn btn-lg btn-danger-outline btn-danger" href="doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/compartilhar" target="_blank">CONTINUAR</a></div>
 
                         </div>
 
