--- a/fazer-doacao.html
+++ b/fazer-doacao.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-24" style="background-image: url(assets/images/room-laptop.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-2h" style="background-image: url(assets/images/room-laptop.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -75,13 +75,13 @@
                         </div>
                         <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
 
-                            <h3 class="mbr-section-title display-2">3° Passo<br>Fazer a doação</h3>
+                            <h3 class="mbr-section-title display-2">3° Passo<div>Fazer a doação</div></h3>
 
                             <div class="mbr-section-text">
-                                <p>Neste passo você deve ter em mãos os dados da pessoa que ira receber a sua doação, para isso entre em contato com um administrador no Grupo Whatsapp Suporte:</p>
+                                <p>Neste passo você deve ter em mãos os dados da pessoa que ira receber a sua doação, para isso entre em contato com um administrador no Grupo Whatsapp Suporte:<br></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-lg btn-success-outline btn-success" href="chat.whatsapp.com/31zG1b9QBvN4TL4dKVrBxr" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>&nbsp;WHATSAPP SUPORTE</a> <a class="btn btn-lg btn-danger-outline btn-danger" href="doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/compartilhar" target="_blank">CONTINUAR</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-lg btn-success-outline btn-success" href="https://chat.whatsapp.com/invite/31zG1b9QBvN4TL4dKVrBxr" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>&nbsp;SUPORTE</a> <a class="btn btn-lg btn-danger-outline btn-danger" href="https://doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/compartilhar" target="_blank">CONTINUAR</a></div>
 
                         </div>
 
