--- a/compartilhar.html
+++ b/compartilhar.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-2e" style="background-image: url(assets/images/room-laptop.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header6-2e" style="background-image: url(assets/images/room-laptop.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
     </div>
@@ -77,10 +77,10 @@
                             <h3 class="mbr-section-title display-2">4° Passo<br>COMPARTILHAR</h3>
 
                             <div class="mbr-section-text">
-                                <p>Compartilhe, vamos crescer juntos...<br>Lembrese a união faz a força<br><br></p>
+                                <p>Compartilhe, vamos crescer juntos...<br>Lembrese a união faz a força.<br><br></p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-lg btn-danger-outline btn-danger" href="https://mobirise.com">CONTINUE</a></div>
+                            <div class="mbr-section-btn"><a class="btn btn-lg btn-danger-outline btn-danger" href="https://doa-vs-ganha-ajuda-entre-amigos.github.io/ajuda-mutua/compartilhar" target="_blank">CONTINUE</a></div>
 
                         </div>
 
